--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,91 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    text-align: center;
   }
-}
+  
+  nav ul {
+    list-style: none;
+  }
+  
+  nav ul li {
+    display: inline-block;
+    padding: 10px;
+  }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  .header-btn {
+    background: #000;
+    color: #fff;
+    width: 220px;
+    padding: 10px 0;
+    margin: 0 15px;
+    font-size: 30px;
+  }
+  .header-btn .link {
+    text-decoration: none;
+    color: #fff;
+    margin: 0;
+    padding-left: 10px;
+  }
+  .create {
+    background: rgb(187, 113, 255);
+  }
+  .list {
+    background: rgb(58, 255, 189);
+  }
+  .list-table {
+    /* background-color: red; */
+    width: 70%;
+    margin: 0 auto;
+  }
+  /* td,th */
+  table.list-table, .list-table  th, .list-table td{
+    border: 1px solid black;
+    border-collapse: collapse;
+    padding: 1rem;
+    vertical-align: middle;
+}
+.error {
+  background-color: rgb(255, 90, 90);
+  color: #fff;
+  font-size: 20px;
+  font-weight: bold;
+  width: 30%;
+  padding: 10px;
+  margin: 5px;
+  margin-right: auto;
+  border-radius: 10px;
+}
+.actions {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.link {
+  padding: 5px 20px;
+  border: none;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 5px;
+  width: 50px;
+  text-transform: capitalize;
+  font-weight: bold;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.link-edit{
+  margin-right: 5px;
+  background: rgb(80, 80, 255);
+}
+.link-delete{
+  cursor: pointer;
+  width: 100px;
+  text-align: center;
+  padding: 5px 30px;
+  margin-left: 5px;
+  background: red;
+}
+.alert {
+  background: rgb(255 80 80);
+  color: #fff;
+  font-size: 25px;
+  font-weight: bold;
+  padding: 20px;
+  width: 70%;
+  margin: 0 auto;
+  border-radius: 10px;
 }
